--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,9 @@ include:
         file: '.gitlab-ci/.junit-report.yml'
 
     -   project: 'wpml/wpml-plugin-template'
+        file: '.gitlab-ci/quality/php/phpstan.yml'
+
+    -   project: 'wpml/wpml-plugin-template'
         file: '.gitlab-ci/quality/php/compatibility.with-report.yml'
     -   project: 'wpml/wpml-plugin-template'
         file: '.gitlab-ci/quality/php/duplication.yml'
