Move to PHPStan level 1
https://onthegosystems.myjetbrains.com/youtrack/issue/wpmlga-771

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,5 @@
 parameters:
-  level: 0
+  level: 1
   featureToggles:
     disableRuntimeReflectionProvider: true
   bootstrapFiles:
@@ -38,6 +38,10 @@ parameters:
 
   checkFunctionNameCase: true
   inferPrivatePropertyTypeFromConstructor: true
+
+  ignoreErrors:
+    # Uses func_get_args()
+    - '#^Function apply_filters(_ref_array)? invoked with [34567] parameters, 2 required\.$#'
 
   parallel:
     processTimeout: 300.0
