--- a/composer.json
+++ b/composer.json
@@ -61,9 +61,9 @@
         "otgs/wp-plugin-version": "dev-master",
         "roave/security-advisories": "dev-master",
         "wpml/collect": "dev-wpml-collect-rename",
-        "wpml/fp": "0.1.4",
+        "wpml/fp": "dev-develop",
         "wpml/page-builders-gutenberg": "dev-develop",
-        "wpml/wp": "0.1.2"
+        "wpml/wp": "dev-develop"
     },
     "scripts": {
         "make": [
