Fatal error when updating product through WC REST API V1
- Adding **VersionAdapter::getId()** to support getting id in different API versions.

https://onthegosystems.myjetbrains.com/youtrack/issue/wcml-3643

--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,9 @@
             "compatibility/",
             "inc/"
         ],
+        "files":[
+            "inc/functions.php"
+        ],
         "exclude-from-classmap": [
             "/vendor/wpml"
         ]
