--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
         "otgs/build-tools-ci": "^0.12",
         "otgs/changelog": "dev-develop",
         "otgs/php-integration-tests": "dev-develop",
+        "otgs/ui": "dev-master",
         "otgs/unit-tests-framework": "~1.2.0",
         "otgs/wp-plugin-version": "dev-master",
         "roave/security-advisories": "dev-master",
@@ -93,7 +94,8 @@
             "inc/functions.php"
         ],
         "exclude-from-classmap": [
-            "/vendor/wpml"
+            "/vendor/wpml",
+            "/vendor/otgs/ui"
         ]
     }
 }
