--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
     MYSQL_ROOT_PASSWORD: mysql_strong_password
     MYSQL_HOST: localhost
     REAL_MYSQL_HOST: mysql
+    GIT_SSL_NO_VERIFY: 1
 
 stages:
     - pre-flight
