--- a/composer.json
+++ b/composer.json
@@ -84,11 +84,10 @@
         "bin": "echo 'bin not installed'",
         "post-update-cmd": [
             "@composer bin all update --ansi",
-            "@install-addons"
+            "@update-addons"
         ],
-        "install-addons": [
-            "@composer install --working-dir=addons --no-dev --prefer-dist"
-        ]
+        "install-addons": "@composer install --working-dir=addons --no-dev --prefer-dist",
+        "update-addons": "@composer update --working-dir=addons --no-dev --prefer-dist"
     },
     "autoload": {
         "classmap": [
