--- a/addons/composer.json
+++ b/addons/composer.json
@@ -14,6 +14,6 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "wpml/wpml-dependencies": "dev-wcml-3782"
+        "wpml/wpml-dependencies": "dev-master"
     }
 }
