Create and use a substitute for SitePress in standalone mode

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -25,6 +25,7 @@ parameters:
     - tests/phpstan/stubs/wpml-media.stub
 
     - tests/phpstan/stubs/compatibility.stub
+    - addons/vendor/autoload.php
 
   paths:
     - classes
