Separate pure and impure functions in 2 different files
Pure functions can be autoloaded and we should not mock it in our unit tests.
However, as we want to mock impure function in our tests, we cannot load
it automatically.

This change requires some adjustments in existing tests to mock the
impure functions.

https://onthegosystems.myjetbrains.com/youtrack/issue/wcml-3843

--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,7 @@
             "inc/"
         ],
         "files": [
-            "inc/functions.php"
+            "inc/functions-pure.php"
         ],
         "exclude-from-classmap": [
             "/vendor/wpml",
