--- a/vendor-bin/phpstan/composer.json
+++ b/vendor-bin/phpstan/composer.json
@@ -1,8 +1,16 @@
 {
     "require-dev": {
-        "phpstan/phpstan": "^0.12.52",
+        "phpstan/phpstan": "^0.12.85",
         "php-stubs/wordpress-stubs": "^5.5",
         "phpstan/extension-installer": "^1.0",
         "szepeviktor/phpstan-wordpress": "^0.7.0"
+    },
+    "config": {
+        "platform": {
+            "php": "7.3"
+        },
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     }
 }
