--- a/vendor-bin/sniff/composer.json
+++ b/vendor-bin/sniff/composer.json
@@ -6,5 +6,13 @@
     "sebastian/phpcpd": "^6.0",
     "squizlabs/php_codesniffer": "^3.5",
     "wp-coding-standards/wpcs": "^2.3"
+  },
+  "config": {
+    "platform": {
+      "php": "7.3"
+    },
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
