--- a/composer.json
+++ b/composer.json
@@ -81,8 +81,7 @@
         ],
         "bin": "echo 'bin not installed'",
         "post-update-cmd": [
-            "@composer bin all update --ansi",
-            "@update-addons"
+            "@composer bin all update --ansi"
         ],
         "install-addons": "@composer install --working-dir=addons --no-dev --prefer-dist",
         "update-addons": "@composer update --working-dir=addons --no-dev --prefer-dist"
