--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "redux": "~4.0.0",
         "tippy.js": "~2.2.0",
         "url-polyfill": "^1.1.3",
-        "wpml-common-js-source": "git+ssh://git@git.onthegosystems.com:10022/wpml-packages/wpml-common-js-source.git"
+        "wpml-common-js-source": "git+ssh://git@git.onthegosystems.com:10022/wpml-packages/wpml-common-js-source.git#1.0.9"
     },
     "devDependencies": {
         "@types/jest": "^24.0.15",
