--- a/vendor-bin/stubs/composer.json
+++ b/vendor-bin/stubs/composer.json
@@ -1,4 +1,9 @@
 {
+    "config": {
+        "platform": {
+            "php": "7.3"
+        }
+    },
     "require-dev": {
         "giacocorsiglia/stubs-generator": "^0.5.0"
     }
