--- a/addons/composer.json
+++ b/addons/composer.json
@@ -9,11 +9,37 @@
         "sort-packages": true,
         "platform": {
             "php": "5.6"
+        },
+        "allow-plugins": {
+            "composer/installers": true
         }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
+        "composer/installers": "~1.0",
         "wpml/wpml-dependencies": "dev-master"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "@make-addons"
+        ],
+        "post-update-cmd": [
+            "@make-addons"
+        ],
+        "make-addons": [
+            "@make-dependencies",
+            "rm -Rf vendor/"
+        ],
+        "make-dependencies": [
+            "@composer install --working-dir=wpml-dependencies --no-dev"
+        ]
+    },
+    "extra": {
+        "installer-paths": {
+            "{$name}": [
+                "wpml/wpml-dependencies"
+            ]
+        }
     }
 }
