--- a/phpstan.neon
+++ b/phpstan.neon
@@ -24,7 +24,7 @@ parameters:
     - tests/phpstan/stubs/wpml-media.stub
 
     - tests/phpstan/stubs/compatibility.stub
-    - addons/vendor/autoload.php
+    - addons/wpml-dependencies/vendor/autoload.php
 
   paths:
     - classes
