--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,9 @@ indent_style = tab
 indent_size = 4
 tab_width = 4
 
+[*.twig]
+indent_style = space
+
 [*.neon]
 indent_style = space
 indent_size = 2
