Prepare for releasing WCML 5.1.3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ include:
     -   project: 'wpml/wpml-plugin-template'
         file: '.gitlab-ci/test/cc.yml'
     -   project: 'wpml/wpml-plugin-template'
-        file: '.gitlab-ci/test/unit/php73.with-report.yml'
+        file: '.gitlab-ci/test/unit/php.with-report.yml'
     -   project: 'wpml/wpml-plugin-template'
         file: '.gitlab-ci/test/integration/php.yml'
 
