--- a/addons/composer.json
+++ b/addons/composer.json
@@ -18,7 +18,7 @@
     "prefer-stable": true,
     "require": {
         "composer/installers": "~1.0",
-        "wpml/wpml-dependencies": "dev-master"
+        "wpml/wpml-dependencies": "dev-compdev-140-2"
     },
     "scripts": {
         "post-install-cmd": [
